--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# ABI files
+/src/contracts
+
 # dependencies
 /node_modules
 /.pnp
@@ -23,3 +26,5 @@ yarn-debug.log*
 debug.log*
 yarn-error.log*
 package-lock.json
+
+
